--- a/hello.html
+++ b/hello.html
@@ -8,5 +8,39 @@
 <body>
     <h1>Hello world</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae commodi tempora a ea ipsam eveniet id et, veritatis hic aliquam nisi accusamus distinctio laboriosam voluptatum quaerat quod autem. Illum, sequi!</p>
+    <p>hello<sup>world</sup></p>
+    <ins>hello</ins>
+    <a href="www.google.com">Google</a>
+
+
+    <table border="1">
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+        </tr>
+
+        <tr>
+            <td>Prayush</td>
+            <td>23</td>
+        </tr>
+        <tr>
+            <td>Prateekshya</td>
+            <td>23</td>
+        </tr>
+    </table>
+
+    <ol type="A">
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+        <li>four</li>
+    </ol>
+
+    <ul type="square">
+        <li>apple</li>
+        <li>banana</li>
+        <li>mango</li>
+        <li>orange</li>
+    </ul>
 </body>
 </html>
